--- a/src/style.css
+++ b/src/style.css
@@ -53,8 +53,11 @@ input {
     margin: 15px 0;
     outline: 0;
     box-shadow: 0 25px 50px -12px rgb(0 0 0 / 1);
-    border: 5px solid #355fab;
-    font-size: 15px;
+    background-color: #355fab;
+    border: none;
+    font-size: 0.94rem;
+    color: white;
+    font-weight: bolder;
 }
 
 button {
@@ -66,10 +69,9 @@ button {
     background-color: #e45940;
     color: white;
     border: none;
-    font-size: 15px;
+    font-size: 0.94rem;
     font-weight: bolder;
     box-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.8);
-    border: 2px solid #355fab;
     transition: color 0.1s, background-color 0.1s;
 }
 
@@ -77,4 +79,40 @@ button:hover {
     background-color: #355fab;
 }
 
+.pokemon {
+    display: flex;
+    justify-content: center;
+    margin-top: -60px;
+    color: white;
+}
+
+.pokemonInfo {
+    margin-right: 150px;
+    width: 153px;
+}
+
+.pokemonInfo img {
+    width: 105px;
+}
+
+.pokemonInfo, table {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 30px;
+    border-radius: 15px;
+    text-align: center;
+   
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+a {
+    color: #e45940;
+    text-decoration: none;
+}
 
