--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    width: 100vw;
 }
 
 
@@ -103,6 +105,8 @@ button:hover {
    
 }
 
+/* FOOTER */
+
 footer {
     position: absolute;
     bottom: 0;
@@ -116,3 +120,39 @@ a {
     text-decoration: none;
 }
 
+/* RESPONSIVIDADE */
+
+@media screen and (max-width: 590px){
+    body {
+        background-image: url('assets/resp.png');
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .pokemon {
+        width: 100vw;
+        flex-wrap: wrap;
+    }
+    
+    .pokemonInfo {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .pokemonInfo, table {
+        width: 100vw;
+        margin: 10px;
+    }        
+
+}
+
+@media screen and (max-width: 500px){
+    input{
+        width: 80%;
+    }
+
+    h2 {
+        text-align: center;
+    }
+}
