--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ input {
     font-size: 0.94rem;
     color: white;
     font-weight: bolder;
+    text-transform: lowercase;
 }
 
 button {
@@ -125,8 +126,8 @@ a {
 @media screen and (max-width: 590px){
     body {
         background-image: url('assets/resp.png');
-        height: 100vh;
-        width: 100vw;
+        /* height: 100vh;
+        width: 100vw; */
     }
 
     .pokemon {
@@ -155,4 +156,9 @@ a {
     h2 {
         text-align: center;
     }
+
+    footer {
+        position: absolute;
+        bottom: 0;
+    }   
 }
